packages/swc-plugin-workflow/transform/tests/errors/invalid-default-exports-step/output-workflow.js
'use step';
// Error: default class export
export default class MyClass {
    method() {}
}
